# Video-Creator-X

./: .replit  app.py  file_manager.py  pyproject.toml  replit.nix  utils.py
attached_assets/: app.py  custom.css  editor.html  editor.js  pyproject.toml  timeline.js  utils.py
static/css/: custom.css
static/js/: ai_workflow.js  editor.js  timeline.js
templates/: ai_workflow.html  editor.html  home.html  layout.html
