[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator>=4.4.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "imageio-ffmpeg>=0.4.7",
    "imageio>=2.19.0",
    "moviepy==2.0.0.dev2",
    "pillow>=9.0.0",
    "proglog>=0.1.9",
    "psycopg2-binary>=2.9.10",
    "requests>=2.27.0",
    "tqdm>=4.65.0",
    "werkzeug>=3.1.3",
    "numpy>=1.21.0",
    "trafilatura>=2.0.0",
    "opencv-python>=4.11.0.86",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
]
